--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,19 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>YETO - Yemen Economic Transparency Observatory</title>    
+    <title>YETO - Yemen Economic Transparency Observatory</title>
+    <meta name="description" content="YETO provides comprehensive economic data, research, and analysis on Yemen's economy including banking, trade, humanitarian indicators, and exchange rates since 2010." />
+    <meta name="keywords" content="Yemen economy, Yemen economic data, Yemen banking, Yemen exchange rate, Yemen trade, Yemen humanitarian, Yemen Central Bank, Aden, Sanaa, Yemen GDP, Yemen inflation, Yemen economic research, مرصد الشفافية الاقتصادية اليمني" />
+    <meta name="author" content="Causeway Group" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="YETO - Yemen Economic Transparency Observatory" />
+    <meta property="og:description" content="Comprehensive economic data and analysis platform for Yemen covering banking, trade, humanitarian indicators, and research since 2010." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ar_YE" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="YETO - Yemen Economic Transparency Observatory" />
+    <meta name="twitter:description" content="Comprehensive economic data and analysis platform for Yemen covering banking, trade, humanitarian indicators, and research since 2010." />
     <!-- Google Fonts: Inter for English, Cairo for Arabic -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
